<resources>
    <string name="app_name">AI Guard</string>
    <string name="vn">VN</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="vietnam">Việt Nam</string>
    <string name="usa">USA</string>
    <string name="malay">Malaysia</string>
    <string name="english">English</string>
    <string name="user">Tài Khoản</string>
    <string name="licenseDetect">Nhiện diện biển số</string>
    <string name="zoneInput">Nhập tên zone</string>
    <string name="hintInputfullname">Nhập họ và tên</string>
    <string name="editAva">Sửa</string>
    <string name="pass">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="containute">Tiếp tục</string>
    <string name="close">Đóng</string>
    <string name="oke">Ok</string>
    <string name="wrongPass">Sai tài khoản hoặc mật khẩu</string>
    <string name="camera">Camera</string>
    <string name="nameType">Loại đối tượng</string>
    <string name="customer">Khách hàng</string>
    <string name="partner">partner</string>
    <string name="cameraSetting">Cấu hình camera</string>
    <string name="generalInfor">Thông tin chung</string>
    <string name="manageCustomer">Quản lý khách hàng</string>
    <string name="manageGroupLicense">Quản lý nhóm biển số</string>
    <string name="manageLicense">Quản lý biển số</string>
    <string name="unknowFace">Khuôn mặt chưa xác định</string>
    <string name="manageTypeCustomer">Quản lý loại khách hàng</string>
    <string name="internetSetting">Cài đặt mạng</string>
    <string name="saveFile">Lưu trữ</string>
    <string name="version">Phiên bản</string>
    <string name="groupLicense">Nhóm biển số</string>
    <string name="deviceChannel">Kênh thiết bị</string>
    <string name="groud">Groud</string>
    <string name="devices">Thiết bị</string>
    <string name="listZone">Danh sách Zone</string>
    <string name="sensitivity">Độ nhạy</string>
    <string name="aiState">Trạng thái AI</string>
    <string name="playback">Playback</string>
    <string name="displayTime">Hiển thị thời gian</string>
    <string name="displayName">Hiển thị tên</string>
    <string name="sd">SD</string>
    <string name="hd">HD</string>
    <string name="locate">Vị trí</string>
    <string name="scheduleActive">Lịch hoạt động</string>
    <string name="autoSynchronized">Đồng bộ tự động</string>
    <string name="DHCP">DHCP</string>
    <string name="high">Cao</string>
    <string name="veryHigh">Rất cao</string>
    <string name="veryLow">Rất thấp</string>
    <string name="ten">10</string>
    <string name="medium">Trung bình</string>
    <string name="big">To</string>
    <string name="small">Nhỏ</string>
    <string name="settingHandmade">Cài đặt thủ công</string>
    <string name="cameraName">Tên Camera</string>
    <string name="description">Mô tả</string>

    <string name="setting_parameter">Cấu hình thông số</string>
    <string name="contrast">Tương phản</string>
    <string name="saturation">Độ bão hoà</string>
    <string name="definition">Độ nét</string>
    <string name="brightness">Độ sáng</string>
    <string name="incandescent">Incandescent</string>
    <string name="fluorescent">Fluorescent</string>
    <string name="day_light">Daylight</string>
    <string name="night">Night</string>
    <string name="cloudy">Cloudy</string>
    <string name="zoneName">Tên zone</string>
    <string name="hourDefault">00:00:00 --/--/--</string>
    <string name="resolution">Độ phân giải</string>
    <string name="restart">Khởi động lại</string>
    <string name="frame_rate">Tốc độ khung hình</string>
    <string name="codec">Codec</string>
    <string name="typeBitRate">Loại bit-rate</string>
    <string name="qualityVideo">Chất lượng video</string>
    <string name="IFrame">I-Frame duration</string>
    <string name="bite_rate">Bite-rate</string>
    <string name="selectChannel">Chọn kênh</string>
    <string name="auto">Auto</string>
    <string name="day">Day</string>
    <string name="value0">0</string>
    <string name="zero">0 độ</string>
    <string name="rotate">180 độ</string>
    <string name="search">Tìm kiếm</string>
    <string name="active">Kích hoạt</string>
    <string name="isActive">Đang hoạt động</string>
    <string name="activing">Đang kích hoạt</string>
    <string name="inactive">Không kích hoạt</string>
    <string name="feature_improving">Tính năng đang phát triển</string>
    <string name="mirror">Phản chiếu</string>
    <string name="derection">Hướng xoay</string>
    <string name="forgetPass">Quên mật khẩu </string>
    <string name="hintRegister">Bạn chưa có tài khoản? </string>
    <string name="register">Đăng ký </string>
    <string name="viewOnLAN">Xem trực tiếp qua LAN</string>
    <string name="hintLogin">Sử dụng số điện thoại của bạn để đăng \n nhập hệ thống </string>
    <string name="errorLogin">Đăng nhập không thành công!  </string>
    <string name="faceCustomer">Nhận diện khách hàng </string>
    <string name="typeCustomer">Phần loại đối tượng </string>
    <string name="filter">Bộ lọc</string>
    <string name="unknown">Unknown</string>
    <string name="Interval">Khoảng thời gian </string>
    <string name="addNew">Thêm mới </string>
    <string name="profileInfo">Thông tin cá nhân</string>
    <string name="watchEvent">Xem sự kiện </string>
    <string name="nameZone">Tên Zone </string>
    <string name="emptyNameZone">Tên Zone không được để trống ! </string>
    <string name="intrusionDetect">Phát hiện xâm nhập</string>
    <string name="fireDetect">Phát hiện khói lửa</string>
    <string name="lableDetect">Nhận diện biển số</string>
    <string name="setting">Cài đặt</string>
    <string name="edit_infor">Sửa thông tin</string>
    <string name="settingAI">Cài đặt AI</string>
    <string name="notify_setting">Cài đặt thông báo</string>
    <string name="cancel">Huỷ</string>
    <string name="low">Thấp</string>
    <string name="large">Lớn</string>
    <string name="alwayActive">Luôn hoạt động</string>
    <string name="sizeFace">Kích thước khuôn mặt</string>
    <string name="verybig">Rất to</string>
    <string name="verySmall">Rất nhỏ</string>
    <string name="schedule">Lịch hoạt động</string>
    <string name="nation">Quốc gia</string>
    <string name="time">Thời gian</string>
    <string name="timeSetting">Cài đặt thời gian</string>
    <string name="repeat">Lặp lại</string>
    <string name="timeWarning">Thời gian cảnh báo</string>
    <string name="content">Nội dung cảnh báo</string>
    <string name="licenseTx">37G160769</string>
    <string name="title">Tiêu đề</string>


    <string name="acessdetect">Cảnh báo xâm nhập</string>
    <string name="fastConnection">Kết nối nhanh</string>
    <string name="licenseplate">Nhận diện biển số</string>
    <string name="customerrecognize">Nhận diện khách hàng</string>
    <string name="firedetect">Nhận diện khói lửa</string>
    <string name="introNotifySetting">Tính năng cài đặt thông báo giúp bạn tùy chỉnh thiết bị của bạn cho các nhu cầu cá nhân nhận thông báo từ camera của mình</string>

    <string name="cn">Chủ nhật</string>
    <string name="t2">Thứ 2</string>
    <string name="t3">Thứ 3</string>
    <string name="t4">Thứ 4</string>
    <string name="t5">Thứ 5</string>
    <string name="t6">Thứ 6</string>
    <string name="t7">Thứ 7</string>

    <string name="save">Lưu</string>
    <string name="edit">Sửa</string>
    <string name="edit_ai_info">Sửa thông tin cấu hình của camera</string>
    <string name="delete">Xoá</string>
    <string name="delete_ai_info">Xoá cấu hình AI của camera</string>

    <string name="infor_user">Thông tin người dùng</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="support">Trợ giúp</string>
    <string name="preview">Giới thiệu</string>
    <string name="language">Ngôn ngữ</string>
    <string name="notifySetting">Cài đặt thông báo</string>
    <string name="p2pMode">Chế độ P2P</string>

    <string name="logout">Đăng xuất</string>
    <string name="chooseImage">Chọn ảnh mẫu</string>
    <string name="fullName">Họ và tên</string>
    <string name="license">Biển số</string>
    <string name="nameDevice">Tên thiết bị</string>
    <string name="branch">Chi nhánh</string>
    <string name="serialNumber">Số serial</string>
    <string name="mac">MAC</string>
    <string name="dateTime">Ngày và giờ</string>
    <string name="timeZone">Múi giờ</string>
    <string name="softwarVersion">Phiên bản phần mềm</string>
    <string name="IPv4address">IPv4 address</string>
    <string name="IPv4subnetMask">IPv4 Subnet Mask</string>
    <string name="IPv4default">IPv4 Default Gateway</string>
    <string name="preferredDNS">Preferred DNS</string>
    <string name="ntpServer">NTP Server</string>
    <string name="alterDNS">Alternate DNS</string>
    <string name="model">Model</string>
    <string name="hostname">Hostname</string>
    <string name="input_fullName">Nhập họ và tên</string>
    <string name="ipDefault">0.0.0.0</string>

    <string name="changePassTitle">Đổi mật khẩu</string>
    <string name="nowPassword">Mật khẩu hiện tại</string>
    <string name="hintNowPassword">Nhập mật khẩu hiện tại</string>
    <string name="confirmPassword">Xác nhật mật khẩu</string>
    <string name="hintConfirmPassword">Nhập mật khẩu xác nhận</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="hintNewPassword">Nhập mật khẩu mới</string>
    <string name="confirmPass">Đồng ý</string>

    <string name="event">Sự kiện</string>
    <string name="contentEvent">Nội dung sự kiện</string>
    <string name="fullNameInput">Nhập họ và tên</string>
    <string name="peopleCode">Mã đối tượng</string>
    <string name="peopleCodeInput">Nhập mã đối tượng</string>
    <string name="peopleType">Loại đối tượng</string>
    <string name="licenseType">Loại biển số</string>
    <string name="vehicle">Loại phương tiện</string>
    <string name="textSize">Cỡ chữ</string>
    <string name="dateOfBirth">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="emailInput">Nhập email</string>
    <string name="sex">Giới tính</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="phoneNumberInput">Nhập số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="addressInput">Nhập địa chỉ</string>
    <string name="note">Ghi chú</string>
    <string name="noteInput">Nhập ghi chú</string>
    <string name="state">Trạng thái</string>

    <string name="name_object">Tên đối tượng</string>
    <string name="name_object_input">Nhập tên đối tượng</string>
    <string name="select_color">Chọn màu</string>
    <string name="description_input">Nhập mô tả</string>

    <string name="popup">Popup</string>
    <string name="sound">Âm thanh</string>
    <string name="blink">Nhấp nháy</string>
    <string name="select_warning">Chọn loại cảnh báo</string>

    <string name="all">Tất cả</string>


    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>

    <string name="default_notification_channel_id">PushNotification</string>

</resources>