<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/conner_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iconWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/warningicon"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noticeTitle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iconWarning"
        android:layout_marginTop="10dp"
        android:text="@string/errorLogin"
        android:textStyle="bold"
        android:textColor="@color/titleNotice"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/text"
        android:text="@string/wrongPass"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/noticeTitle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:id="@+id/close"
        android:text="@string/close"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:background="@drawable/conner_button_login"
        android:layout_below="@+id/text"/>

</RelativeLayout>