<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/conner_login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/conner_login"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTx"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/nameZone"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/nameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTx"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/conner_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_10sdp">


                <EditText
                    android:id="@+id/nameZoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/zoneInput"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />

            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/warningTx"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/nameLayout"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/emptyNameZone"
            android:visibility="gone"
            android:textColor="@color/red"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/nameLayout"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@drawable/conner_button_grey"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@drawable/conner_button_login"
                android:text="@string/oke"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>

