<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentTop="true"
        android:background="@color/barColor">

        <RelativeLayout
            android:id="@+id/backIm"
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="3dp"
                android:src="@drawable/back_icon" />
        </RelativeLayout>

        <TextView
            android:gravity="center"
            android:id="@+id/title"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/cameraName"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/settingIM"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/setting_canera_icon" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_below="@+id/bar"
        android:id="@+id/cameraLayout">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/thumImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/mainColor"
            android:layout_marginTop="20dp"
            android:max="3"
            android:progress="100" />


        <com.bkav.aiotcloud.view.PaintView
            android:id="@+id/touchLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraLayout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLines="1"
        android:text="@string/setting_parameter"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/aiStateLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/textSetting"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/conner_layout">

        <TextView
            android:id="@+id/stateCameraTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="1"
            android:text="@string/aiState"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swOnOffAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:theme="@style/styleSwitch" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/lacateLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/aiStateLayout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/conner_layout">

        <TextView
            android:id="@+id/locateTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:maxLines="1"
            android:text="@string/locate"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locateTx"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="1"
            android:text="@string/locate"
            android:textColor="@color/grayLine"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sensitivityLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/lacateLayout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/conner_layout">

        <TextView
            android:id="@+id/sensitivityTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:maxLines="1"
            android:text="@string/sensitivity"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sensitivityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sensitivityTx"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="1"
            android:text="@string/high"
            android:textColor="@color/grayLine"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/faceLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/sensitivityLayout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/conner_layout">

        <TextView
            android:id="@+id/sizeFaceTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:maxLines="1"
            android:text="@string/sizeFace"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sizeFaceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sizeFaceTx"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="1"
            android:text="@string/big"
            android:textColor="@color/grayLine"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nationLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/faceLayout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/conner_layout">

        <TextView
            android:id="@+id/nationTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:maxLines="1"
            android:text="@string/nation"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nationTx"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="1"
            android:text="@string/vietnam"
            android:textColor="@color/grayLine"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scheduleLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/nationLayout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/conner_layout">

        <TextView
            android:id="@+id/scheduleTitleTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:maxLines="1"
            android:text="@string/schedule"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scheduleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scheduleTitleTx"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="1"
            android:text="@string/alwayActive"
            android:textColor="@color/grayLine"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addScheuleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:visibility="gone"
        android:layout_below="@id/nationLayout"
        android:layout_marginBottom="@dimen/_10sdp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/background"
            android:clipToPadding="false" />

    </RelativeLayout>




</RelativeLayout>