<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    android:weightSum="3"
    android:background="@drawable/conner_bar"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/editLayout"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:padding="@dimen/_3sdp"
            android:id="@+id/editIcon"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/edit_icon"
            android:layout_centerVertical="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/editIcon">

            <TextView
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/editDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTitle"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/edit_ai_info"
                android:textColor="@color/textHint"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/editIcon"
            android:background="@color/textHint" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/deleteLayout"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/delete_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/deleteIcon">

            <TextView
                android:id="@+id/deleteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/deleteDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deleteTitle"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/delete_ai_info"
                android:textColor="@color/textHint"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/deleteIcon"
            android:background="@color/textHint" />
    </RelativeLayout>
    

</LinearLayout>